[package]
name = "nexus_workcell_editor"
version = "0.0.1"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "nexus_workcell_editor"

[dependencies]
bevy = "0.12"
clap = { version = "4.0.10", features = ["color", "derive", "help", "usage", "suggestions"] }
crossbeam-channel = "0.5.8"
# TODO(luca) back to main when PR is merged
rmf_workcell_editor = { git = "https://github.com/luca-della-vedova/rmf_workcell", branch = "first_commit" }
rmf_workcell_format = { git = "https://github.com/luca-della-vedova/rmf_workcell", branch = "first_commit" }
rclrs = "0.4.0"
nexus_calibration_msgs = "*"
