[package]
name = "nexus_workcell_editor"
version = "0.0.1"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "nexus_workcell_editor"

[dependencies]
bevy = "0.12"
bevy_egui = "0.23"
# TODO(luca) Fix upstream by removing the open_url feature from bevy_egui
home = "=0.5.9"
# TODO(luca) Just use the version used by site editor once released
bevy_impulse = { git = "https://github.com/open-rmf/bevy_impulse", branch = "main" }
clap = { version = "4.0.10", features = ["color", "derive", "help", "usage", "suggestions"] }
crossbeam-channel = "0.5.8"
# TODO(luca) back to main when PR is merged
rmf_site_editor = { git = "https://github.com/open-rmf/rmf_site", rev = "f4bed77" }
rmf_site_format = { git = "https://github.com/open-rmf/rmf_site", rev = "f4bed77" }
rclrs = "0.4.0"
nexus_calibration_msgs = "*"
